don't crash when dequeing job sequeence in suspended weaver

BUG: 251976

svn path=/branches/KDE/4.5/kdelibs/; revision=1189097